--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 <body>
-    <div class="container">
+    <div class="container-text">
       <img class="img-main" src="./assets/images/illustration-article.svg" alt="illustration-article">
       <div class="blog-text">
         <h3 class="yellow-txt">Learning</h3>
